Visualize/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> top
Rule 1     top -> <empty>
Rule 2     top -> stmt_list
Rule 3     top -> top func_decl stmt_list_opt
Rule 4     top -> top func_decl stmt_list END_STMT semi_opt
Rule 5     semi_opt -> <empty>
Rule 6     semi_opt -> semi_opt SEMI
Rule 7     semi_opt -> semi_opt COMMA
Rule 8     stmt -> continue_stmt
Rule 9     stmt -> break_stmt
Rule 10    stmt -> expr_stmt
Rule 11    stmt -> global_stmt
Rule 12    stmt -> persistent_stmt
Rule 13    stmt -> command
Rule 14    stmt -> for_stmt
Rule 15    stmt -> if_stmt
Rule 16    stmt -> null_stmt
Rule 17    stmt -> return_stmt
Rule 18    stmt -> switch_stmt
Rule 19    stmt -> try_catch
Rule 20    stmt -> while_stmt
Rule 21    stmt -> unwind
Rule 22    unwind -> UNWIND_PROTECT stmt_list UNWIND_PROTECT_CLEANUP stmt_list END_UNWIND_PROTECT
Rule 23    arg1 -> STRING
Rule 24    arg1 -> NUMBER
Rule 25    arg1 -> IDENT
Rule 26    arg1 -> GLOBAL
Rule 27    args -> arg1
Rule 28    args -> args arg1
Rule 29    command -> ident args SEMI
Rule 30    global_list -> ident
Rule 31    global_list -> global_list ident
Rule 32    global_stmt -> GLOBAL global_list SEMI
Rule 33    persistent_stmt -> PERSISTENT expr SEMI
Rule 34    return_stmt -> RETURN SEMI
Rule 35    continue_stmt -> CONTINUE SEMI
Rule 36    break_stmt -> BREAK SEMI
Rule 37    switch_stmt -> SWITCH expr semi_opt case_list END_STMT
Rule 38    case_list -> <empty>
Rule 39    case_list -> CASE expr sep stmt_list_opt case_list
Rule 40    case_list -> OTHERWISE stmt_list
Rule 41    try_catch -> TRY stmt_list CATCH stmt_list END_STMT
Rule 42    try_catch -> TRY stmt_list END_STMT
Rule 43    null_stmt -> SEMI
Rule 44    null_stmt -> COMMA
Rule 45    func_decl -> FUNCTION ident args_opt SEMI
Rule 46    func_decl -> FUNCTION ret EQ ident args_opt SEMI
Rule 47    args_opt -> <empty>
Rule 48    args_opt -> LPAREN RPAREN
Rule 49    args_opt -> LPAREN expr_list RPAREN
Rule 50    arg_list -> ident
Rule 51    arg_list -> arg_list COMMA ident
Rule 52    ret -> ident
Rule 53    ret -> LBRACKET RBRACKET
Rule 54    ret -> LBRACKET expr_list RBRACKET
Rule 55    stmt_list_opt -> <empty>
Rule 56    stmt_list_opt -> stmt_list
Rule 57    stmt_list -> stmt
Rule 58    stmt_list -> stmt_list stmt
Rule 59    concat_list -> expr_list SEMI expr_list
Rule 60    concat_list -> concat_list SEMI expr_list
Rule 61    expr_list -> exprs
Rule 62    expr_list -> exprs COMMA
Rule 63    exprs -> expr
Rule 64    exprs -> exprs COMMA expr
Rule 65    expr_stmt -> expr_list SEMI
Rule 66    while_stmt -> WHILE expr SEMI stmt_list END_STMT
Rule 67    sep -> COMMA
Rule 68    sep -> SEMI
Rule 69    if_stmt -> IF expr sep stmt_list_opt elseif_stmt END_STMT
Rule 70    if_stmt -> IF expr error stmt_list_opt elseif_stmt END_STMT
Rule 71    elseif_stmt -> <empty>
Rule 72    elseif_stmt -> ELSE stmt_list_opt
Rule 73    elseif_stmt -> ELSEIF expr sep stmt_list_opt elseif_stmt
Rule 74    for_stmt -> FOR ident EQ expr SEMI stmt_list END_STMT
Rule 75    for_stmt -> FOR LPAREN ident EQ expr RPAREN SEMI stmt_list END_STMT
Rule 76    for_stmt -> FOR matrix EQ expr SEMI stmt_list END_STMT
Rule 77    expr -> ident
Rule 78    expr -> end
Rule 79    expr -> number
Rule 80    expr -> string
Rule 81    expr -> colon
Rule 82    expr -> NEG
Rule 83    expr -> matrix
Rule 84    expr -> cellarray
Rule 85    expr -> expr2
Rule 86    expr -> expr1
Rule 87    expr -> lambda_expr
Rule 88    expr -> ident PLUSPLUS
Rule 89    expr -> ident MINUSMINUS
Rule 90    lambda_args -> LPAREN RPAREN
Rule 91    lambda_args -> LPAREN arg_list RPAREN
Rule 92    lambda_expr -> HANDLE lambda_args expr
Rule 93    ident -> IDENT
Rule 94    number -> NUMBER
Rule 95    end -> END_EXPR
Rule 96    string -> STRING
Rule 97    colon -> COLON
Rule 98    expr1 -> MINUS expr
Rule 99    expr1 -> PLUS expr
Rule 100   expr1 -> NEG expr
Rule 101   expr1 -> HANDLE ident
Rule 102   expr1 -> PLUSPLUS ident
Rule 103   expr1 -> MINUSMINUS ident
Rule 104   cellarray -> LBRACE RBRACE
Rule 105   cellarray -> LBRACE expr_list RBRACE
Rule 106   matrix -> LBRACKET RBRACKET
Rule 107   matrix -> LBRACKET concat_list RBRACKET
Rule 108   matrix -> LBRACKET concat_list SEMI RBRACKET
Rule 109   matrix -> LBRACKET expr_list RBRACKET
Rule 110   matrix -> LBRACKET expr_list SEMI RBRACKET
Rule 111   expr -> LPAREN expr RPAREN
Rule 112   expr -> expr FIELD
Rule 113   expr -> expr TRANSPOSE
Rule 114   expr -> expr LBRACE expr_list RBRACE
Rule 115   expr -> expr LBRACE RBRACE
Rule 116   expr -> expr LPAREN expr_list RPAREN
Rule 117   expr -> expr LPAREN RPAREN
Rule 118   expr2 -> expr AND expr
Rule 119   expr2 -> expr ANDAND expr
Rule 120   expr2 -> expr BACKSLASH expr
Rule 121   expr2 -> expr COLON expr
Rule 122   expr2 -> expr DIV expr
Rule 123   expr2 -> expr DOT expr
Rule 124   expr2 -> expr DOTDIV expr
Rule 125   expr2 -> expr DOTEXP expr
Rule 126   expr2 -> expr DOTMUL expr
Rule 127   expr2 -> expr DOTMULEQ expr
Rule 128   expr2 -> expr EQEQ expr
Rule 129   expr2 -> expr EXP expr
Rule 130   expr2 -> expr GE expr
Rule 131   expr2 -> expr GT expr
Rule 132   expr2 -> expr LE expr
Rule 133   expr2 -> expr LT expr
Rule 134   expr2 -> expr MINUS expr
Rule 135   expr2 -> expr MUL expr
Rule 136   expr2 -> expr NE expr
Rule 137   expr2 -> expr OR expr
Rule 138   expr2 -> expr OROR expr
Rule 139   expr2 -> expr PLUS expr
Rule 140   expr2 -> expr EQ expr
Rule 141   expr2 -> expr MULEQ expr
Rule 142   expr2 -> expr DIVEQ expr
Rule 143   expr2 -> expr MINUSEQ expr
Rule 144   expr2 -> expr PLUSEQ expr
Rule 145   expr2 -> expr OREQ expr
Rule 146   expr2 -> expr ANDEQ expr

Terminals, with rules where they appear

AND                  : 118
ANDAND               : 119
ANDEQ                : 146
BACKSLASH            : 120
BREAK                : 36
CASE                 : 39
CATCH                : 41
COLON                : 97 121
COMMA                : 7 44 51 62 64 67
CONTINUE             : 35
DIV                  : 122
DIVEQ                : 142
DOT                  : 123
DOTDIV               : 124
DOTEXP               : 125
DOTMUL               : 126
DOTMULEQ             : 127
ELSE                 : 72
ELSEIF               : 73
END_EXPR             : 95
END_STMT             : 4 37 41 42 66 69 70 74 75 76
END_UNWIND_PROTECT   : 22
EQ                   : 46 74 75 76 140
EQEQ                 : 128
EXP                  : 129
FIELD                : 112
FOR                  : 74 75 76
FUNCTION             : 45 46
GE                   : 130
GLOBAL               : 26 32
GT                   : 131
HANDLE               : 92 101
IDENT                : 25 93
IF                   : 69 70
LBRACE               : 104 105 114 115
LBRACKET             : 53 54 106 107 108 109 110
LE                   : 132
LPAREN               : 48 49 75 90 91 111 116 117
LT                   : 133
MINUS                : 98 134
MINUSEQ              : 143
MINUSMINUS           : 89 103
MUL                  : 135
MULEQ                : 141
NE                   : 136
NEG                  : 82 100
NUMBER               : 24 94
OR                   : 137
OREQ                 : 145
OROR                 : 138
OTHERWISE            : 40
PERSISTENT           : 33
PLUS                 : 99 139
PLUSEQ               : 144
PLUSPLUS             : 88 102
RBRACE               : 104 105 114 115
RBRACKET             : 53 54 106 107 108 109 110
RETURN               : 34
RPAREN               : 48 49 75 90 91 111 116 117
SEMI                 : 6 29 32 33 34 35 36 43 45 46 59 60 65 66 68 74 75 76 108 110
STRING               : 23 96
SWITCH               : 37
TRANSPOSE            : 113
TRY                  : 41 42
UNWIND_PROTECT       : 22
UNWIND_PROTECT_CLEANUP : 22
WHILE                : 66
error                : 70

Nonterminals, with rules where they appear

arg1                 : 27 28
arg_list             : 51 91
args                 : 28 29
args_opt             : 45 46
break_stmt           : 9
case_list            : 37 39
cellarray            : 84
colon                : 81
command              : 13
concat_list          : 60 107 108
continue_stmt        : 8
elseif_stmt          : 69 70 73
end                  : 78
expr                 : 33 37 39 63 64 66 69 70 73 74 75 76 92 98 99 100 111 112 113 114 115 116 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 135 136 136 137 137 138 138 139 139 140 140 141 141 142 142 143 143 144 144 145 145 146 146
expr1                : 86
expr2                : 85
expr_list            : 49 54 59 59 60 65 105 109 110 114 116
expr_stmt            : 10
exprs                : 61 62 64
for_stmt             : 14
func_decl            : 3 4
global_list          : 31 32
global_stmt          : 11
ident                : 29 30 31 45 46 50 51 52 74 75 77 88 89 101 102 103
if_stmt              : 15
lambda_args          : 92
lambda_expr          : 87
matrix               : 76 83
null_stmt            : 16
number               : 79
persistent_stmt      : 12
ret                  : 46
return_stmt          : 17
semi_opt             : 4 6 7 37
sep                  : 39 69 73
stmt                 : 57 58
stmt_list            : 2 4 22 22 40 41 41 42 56 58 66 74 75 76
stmt_list_opt        : 3 39 69 70 72 73
string               : 80
switch_stmt          : 18
top                  : 3 4 0
try_catch            : 19
unwind               : 21
while_stmt           : 20

Parsing method: LALR

state 0

    (0) S' -> . top
    (1) top -> .
    (2) top -> . stmt_list
    (3) top -> . top func_decl stmt_list_opt
    (4) top -> . top func_decl stmt_list END_STMT semi_opt
    (57) stmt_list -> . stmt
    (58) stmt_list -> . stmt_list stmt
    (8) stmt -> . continue_stmt
    (9) stmt -> . break_stmt
    (10) stmt -> . expr_stmt
    (11) stmt -> . global_stmt
    (12) stmt -> . persistent_stmt
    (13) stmt -> . command
    (14) stmt -> . for_stmt
    (15) stmt -> . if_stmt
    (16) stmt -> . null_stmt
    (17) stmt -> . return_stmt
    (18) stmt -> . switch_stmt
    (19) stmt -> . try_catch
    (20) stmt -> . while_stmt
    (21) stmt -> . unwind
    (35) continue_stmt -> . CONTINUE SEMI
    (36) break_stmt -> . BREAK SEMI
    (65) expr_stmt -> . expr_list SEMI
    (32) global_stmt -> . GLOBAL global_list SEMI
    (33) persistent_stmt -> . PERSISTENT expr SEMI
    (29) command -> . ident args SEMI
    (74) for_stmt -> . FOR ident EQ expr SEMI stmt_list END_STMT
    (75) for_stmt -> . FOR LPAREN ident EQ expr RPAREN SEMI stmt_list END_STMT
    (76) for_stmt -> . FOR matrix EQ expr SEMI stmt_list END_STMT
    (69) if_stmt -> . IF expr sep stmt_list_opt elseif_stmt END_STMT
    (70) if_stmt -> . IF expr error stmt_list_opt elseif_stmt END_STMT
    (43) null_stmt -> . SEMI
    (44) null_stmt -> . COMMA
    (34) return_stmt -> . RETURN SEMI
    (37) switch_stmt -> . SWITCH expr semi_opt case_list END_STMT
    (41) try_catch -> . TRY stmt_list CATCH stmt_list END_STMT
    (42) try_catch -> . TRY stmt_list END_STMT
    (66) while_stmt -> . WHILE expr SEMI stmt_list END_STMT
    (22) unwind -> . UNWIND_PROTECT stmt_list UNWIND_PROTECT_CLEANUP stmt_list END_UNWIND_PROTECT
    (61) expr_list -> . exprs
    (62) expr_list -> . exprs COMMA
    (93) ident -> . IDENT
    (63) exprs -> . expr
    (64) exprs -> . exprs COMMA expr
    (77) expr -> . ident
    (78) expr -> . end
    (79) expr -> . number
    (80) expr -> . string
    (81) expr -> . colon
    (82) expr -> . NEG
    (83) expr -> . matrix
    (84) expr -> . cellarray
    (85) expr -> . expr2
    (86) expr -> . expr1
    (87) expr -> . lambda_expr
    (88) expr -> . ident PLUSPLUS
    (89) expr -> . ident MINUSMINUS
    (111) expr -> . LPAREN expr RPAREN
    (112) expr -> . expr FIELD
    (113) expr -> . expr TRANSPOSE
    (114) expr -> . expr LBRACE expr_list RBRACE
    (115) expr -> . expr LBRACE RBRACE
    (116) expr -> . expr LPAREN expr_list RPAREN
    (117) expr -> . expr LPAREN RPAREN
    (95) end -> . END_EXPR
    (94) number -> . NUMBER
    (96) string -> . STRING
    (97) colon -> . COLON
    (106) matrix -> . LBRACKET RBRACKET
    (107) matrix -> . LBRACKET concat_list RBRACKET
    (108) matrix -> . LBRACKET concat_list SEMI RBRACKET
    (109) matrix -> . LBRACKET expr_list RBRACKET
    (110) matrix -> . LBRACKET expr_list SEMI RBRACKET
    (104) cellarray -> . LBRACE RBRACE
    (105) cellarray -> . LBRACE expr_list RBRACE
    (118) expr2 -> . expr AND expr
    (119) expr2 -> . expr ANDAND expr
    (120) expr2 -> . expr BACKSLASH expr
    (121) expr2 -> . expr COLON expr
    (122) expr2 -> . expr DIV expr
    (123) expr2 -> . expr DOT expr
    (124) expr2 -> . expr DOTDIV expr
    (125) expr2 -> . expr DOTEXP expr
    (126) expr2 -> . expr DOTMUL expr
    (127) expr2 -> . expr DOTMULEQ expr
    (128) expr2 -> . expr EQEQ expr
    (129) expr2 -> . expr EXP expr
    (130) expr2 -> . expr GE expr
    (131) expr2 -> . expr GT expr
    (132) expr2 -> . expr LE expr
    (133) expr2 -> . expr LT expr
    (134) expr2 -> . expr MINUS expr
    (135) expr2 -> . expr MUL expr
    (136) expr2 -> . expr NE expr
    (137) expr2 -> . expr OR expr
    (138) expr2 -> . expr OROR expr
    (139) expr2 -> . expr PLUS expr
    (140) expr2 -> . expr EQ expr
    (141) expr2 -> . expr MULEQ expr
    (142) expr2 -> . expr DIVEQ expr
    (143) expr2 -> . expr MINUSEQ expr
    (144) expr2 -> . expr PLUSEQ expr
    (145) expr2 -> . expr OREQ expr
    (146) expr2 -> . expr ANDEQ expr
    (98) expr1 -> . MINUS expr
    (99) expr1 -> . PLUS expr
    (100) expr1 -> . NEG expr
    (101) expr1 -> . HANDLE ident
    (102) expr1 -> . PLUSPLUS ident
    (103) expr1 -> . MINUSMINUS ident
    (92) lambda_expr -> . HANDLE lambda_args expr

    FUNCTION        reduce using rule 1 (top -> .)
    $end            reduce using rule 1 (top -> .)
    CONTINUE        shift and go to state 22
    BREAK           shift and go to state 38
    GLOBAL          shift and go to state 25
    PERSISTENT      shift and go to state 36
    FOR             shift and go to state 16
    IF              shift and go to state 51
    SEMI            shift and go to state 44
    COMMA           shift and go to state 46
    RETURN          shift and go to state 11
    SWITCH          shift and go to state 33
    TRY             shift and go to state 19
    WHILE           shift and go to state 27
    UNWIND_PROTECT  shift and go to state 6
    IDENT           shift and go to state 15
    NEG             shift and go to state 24
    LPAREN          shift and go to state 49
    END_EXPR        shift and go to state 23
    NUMBER          shift and go to state 39
    STRING          shift and go to state 48
    COLON           shift and go to state 14
    LBRACKET        shift and go to state 1
    LBRACE          shift and go to state 20
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    HANDLE          shift and go to state 40
    PLUSPLUS        shift and go to state 17
    MINUSMINUS      shift and go to state 50

    unwind                         shift and go to state 10
    expr_list                      shift and go to state 12
    number                         shift and go to state 26
    return_stmt                    shift and go to state 28
    switch_stmt                    shift and go to state 29
    break_stmt                     shift and go to state 42
    lambda_expr                    shift and go to state 30
    end                            shift and go to state 43
    matrix                         shift and go to state 13
    continue_stmt                  shift and go to state 31
    top                            shift and go to state 32
    cellarray                      shift and go to state 21
    expr2                          shift and go to state 3
    expr1                          shift and go to state 45
    global_stmt                    shift and go to state 47
    string                         shift and go to state 41
    colon                          shift and go to state 9
    persistent_stmt                shift and go to state 5
    stmt                           shift and go to state 18
    for_stmt                       shift and go to state 53
    expr_stmt                      shift and go to state 7
    stmt_list                      shift and go to state 52
    ident                          shift and go to state 34
    if_stmt                        shift and go to state 8
    expr                           shift and go to state 35
    try_catch                      shift and go to state 37
    exprs                          shift and go to state 54
    while_stmt                     shift and go to state 55
    command                        shift and go to state 56
    null_stmt                      shift and go to state 57

state 1

    (106) matrix -> LBRACKET . RBRACKET
    (107) matrix -> LBRACKET . concat_list RBRACKET
    (108) matrix -> LBRACKET . concat_list SEMI RBRACKET
    (109) matrix -> LBRACKET . expr_list RBRACKET
    (110) matrix -> LBRACKET . expr_list SEMI RBRACKET
    (59) concat_list -> . expr_list SEMI expr_list
    (60) concat_list -> . concat_list SEMI expr_list
    (61) expr_list -> . exprs
    (62) expr_list -> . exprs COMMA
    (63) exprs -> . expr
    (64) exprs -> . exprs COMMA expr
    (77) expr -> . ident
    (78) expr -> . end
    (79) expr -> . number
    (80) expr -> . string
    (81) expr -> . colon
    (82) expr -> . NEG
    (83) expr -> . matrix
    (84) expr -> . cellarray
    (85) expr -> . expr2
    (86) expr -> . expr1
    (87) expr -> . lambda_expr
    (88) expr -> . ident PLUSPLUS
    (89) expr -> . ident MINUSMINUS
    (111) expr -> . LPAREN expr RPAREN
    (112) expr -> . expr FIELD
    (113) expr -> . expr TRANSPOSE
    (114) expr -> . expr LBRACE expr_list RBRACE
    (115) expr -> . expr LBRACE RBRACE
    (116) expr -> . expr LPAREN expr_list RPAREN
    (117) expr -> . expr LPAREN RPAREN
    (93) ident -> . IDENT
    (95) end -> . END_EXPR
    (94) number -> . NUMBER
    (96) string -> . STRING
    (97) colon -> . COLON
    (106) matrix -> . LBRACKET RBRACKET
    (107) matrix -> . LBRACKET concat_list RBRACKET
    (108) matrix -> . LBRACKET concat_list SEMI RBRACKET
    (109) matrix -> . LBRACKET expr_list RBRACKET
    (110) matrix -> . LBRACKET expr_list SEMI RBRACKET
    (104) cellarray -> . LBRACE RBRACE
    (105) cellarray -> . LBRACE expr_list RBRACE
    (118) expr2 -> . expr AND expr
    (119) expr2 -> . expr ANDAND expr
    (120) expr2 -> . expr BACKSLASH expr
    (121) expr2 -> . expr COLON expr
    (122) expr2 -> . expr DIV expr
    (123) expr2 -> . expr DOT expr
    (124) expr2 -> . expr DOTDIV expr
    (125) expr2 -> . expr DOTEXP expr
    (126) expr2 -> . expr DOTMUL expr
    (127) expr2 -> . expr DOTMULEQ expr
    (128) expr2 -> . expr EQEQ expr
    (129) expr2 -> . expr EXP expr
    (130) expr2 -> . expr GE expr
    (131) expr2 -> . expr GT expr
    (132) expr2 -> . expr LE expr
    (133) expr2 -> . expr LT expr
    (134) expr2 -> . expr MINUS expr
    (135) expr2 -> . expr MUL expr
    (136) expr2 -> . expr NE expr
    (137) expr2 -> . expr OR expr
    (138) expr2 -> . expr OROR expr
    (139) expr2 -> . expr PLUS expr
    (140) expr2 -> . expr EQ expr
    (141) expr2 -> . expr MULEQ expr
    (142) expr2 -> . expr DIVEQ expr
    (143) expr2 -> . expr MINUSEQ expr
    (144) expr2 -> . expr PLUSEQ expr
    (145) expr2 -> . expr OREQ expr
    (146) expr2 -> . expr ANDEQ expr
    (98) expr1 -> . MINUS expr
    (99) expr1 -> . PLUS expr
    (100) expr1 -> . NEG expr
    (101) expr1 -> . HANDLE ident
    (102) expr1 -> . PLUSPLUS ident
    (103) expr1 -> . MINUSMINUS ident
    (92) lambda_expr -> . HANDLE lambda_args expr

    RBRACKET        shift and go to state 61
    NEG             shift and go to state 24
    LPAREN          shift and go to state 49
    IDENT           shift and go to state 15
    END_EXPR        shift and go to state 23
    NUMBER          shift and go to state 39
    STRING          shift and go to state 48
    COLON           shift and go to state 14
    LBRACKET        shift and go to state 1
    LBRACE          shift and go to state 20
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    HANDLE          shift and go to state 40
    PLUSPLUS        shift and go to state 17
    MINUSMINUS      shift and go to state 50

    expr2                          shift and go to state 3
    lambda_expr                    shift and go to state 30
    ident                          shift and go to state 60
    end                            shift and go to state 43
    string                         shift and go to state 41
    expr_list                      shift and go to state 58
    number                         shift and go to state 26
    concat_list                    shift and go to state 59
    exprs                          shift and go to state 54
    cellarray                      shift and go to state 21
    expr1                          shift and go to state 45
    colon                          shift and go to state 9
    expr                           shift and go to state 35
    matrix                         shift and go to state 13

state 2

    (98) expr1 -> MINUS . expr
    (77) expr -> . ident
    (78) expr -> . end
    (79) expr -> . number
    (80) expr -> . string
    (81) expr -> . colon
    (82) expr -> . NEG
    (83) expr -> . matrix
    (84) expr -> . cellarray
    (85) expr -> . expr2
    (86) expr -> . expr1
    (87) expr -> . lambda_expr
    (88) expr -> . ident PLUSPLUS
    (89) expr -> . ident MINUSMINUS
    (111) expr -> . LPAREN expr RPAREN
    (112) expr -> . expr FIELD
    (113) expr -> . expr TRANSPOSE
    (114) expr -> . expr LBRACE expr_list RBRACE
    (115) expr -> . expr LBRACE RBRACE
    (116) expr -> . expr LPAREN expr_list RPAREN
    (117) expr -> . expr LPAREN RPAREN
    (93) ident -> . IDENT
    (95) end -> . END_EXPR
    (94) number -> . NUMBER
    (96) string -> . STRING
    (97) colon -> . COLON
    (106) matrix -> . LBRACKET RBRACKET
    (107) matrix -> . LBRACKET concat_list RBRACKET
    (108) matrix -> . LBRACKET concat_list SEMI RBRACKET
    (109) matrix -> . LBRACKET expr_list RBRACKET
    (110) matrix -> . LBRACKET expr_list SEMI RBRACKET
    (104) cellarray -> . LBRACE RBRACE
    (105) cellarray -> . LBRACE expr_list RBRACE
    (118) expr2 -> . expr AND expr
    (119) expr2 -> . expr ANDAND expr
    (120) expr2 -> . expr BACKSLASH expr
    (121) expr2 -> . expr COLON expr
    (122) expr2 -> . expr DIV expr
    (123) expr2 -> . expr DOT expr
    (124) expr2 -> . expr DOTDIV expr
    (125) expr2 -> . expr DOTEXP expr
    (126) expr2 -> . expr DOTMUL expr
    (127) expr2 -> . expr DOTMULEQ expr
    (128) expr2 -> . expr EQEQ expr
    (129) expr2 -> . expr EXP expr
    (130) expr2 -> . expr GE expr
    (131) expr2 -> . expr GT expr
    (132) expr2 -> . expr LE expr
    (133) expr2 -> . expr LT expr
    (134) expr2 -> . expr MINUS expr
    (135) expr2 -> . expr MUL expr
    (136) expr2 -> . expr NE expr
    (137) expr2 -> . expr OR expr
    (138) expr2 -> . expr OROR expr
    (139) expr2 -> . expr PLUS expr
    (140) expr2 -> . expr EQ expr
    (141) expr2 -> . expr MULEQ expr
    (142) expr2 -> . expr DIVEQ expr
    (143) expr2 -> . expr MINUSEQ expr
    (144) expr2 -> . expr PLUSEQ expr
    (145) expr2 -> . expr OREQ expr
    (146) expr2 -> . expr ANDEQ expr
    (98) expr1 -> . MINUS expr
    (99) expr1 -> . PLUS expr
    (100) expr1 -> . NEG expr
    (101) expr1 -> . HANDLE ident
    (102) expr1 -> . PLUSPLUS ident
    (103) expr1 -> . MINUSMINUS ident
    (92) lambda_expr -> . HANDLE lambda_args expr

    NEG             shift and go to state 24
    LPAREN          shift and go to state 49
    IDENT           shift and go to state 15
    END_EXPR        shift and go to state 23
    NUMBER          shift and go to state 39
    STRING          shift and go to state 48
    COLON           shift and go to state 14
    LBRACKET        shift and go to state 1
    LBRACE          shift and go to state 20
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    HANDLE          shift and go to state 40
    PLUSPLUS        shift and go to state 17
    MINUSMINUS      shift and go to state 50

    lambda_expr                    shift and go to state 30
    ident                          shift and go to state 60
    end                            shift and go to state 43
    string                         shift and go to state 41
    expr                           shift and go to state 62
    number                         shift and go to state 26
    expr2                          shift and go to state 3
    cellarray                      shift and go to state 21
    expr1                          shift and go to state 45
    colon                          shift and go to state 9
    matrix                         shift and go to state 13

state 3

    (85) expr -> expr2 .

    FIELD           reduce using rule 85 (expr -> expr2 .)
    TRANSPOSE       reduce using rule 85 (expr -> expr2 .)
    LBRACE          reduce using rule 85 (expr -> expr2 .)
    LPAREN          reduce using rule 85 (expr -> expr2 .)
    AND             reduce using rule 85 (expr -> expr2 .)
    ANDAND          reduce using rule 85 (expr -> expr2 .)
    BACKSLASH       reduce using rule 85 (expr -> expr2 .)
    COLON           reduce using rule 85 (expr -> expr2 .)
    DIV             reduce using rule 85 (expr -> expr2 .)
    DOT             reduce using rule 85 (expr -> expr2 .)
    DOTDIV          reduce using rule 85 (expr -> expr2 .)
    DOTEXP          reduce using rule 85 (expr -> expr2 .)
    DOTMUL          reduce using rule 85 (expr -> expr2 .)
    DOTMULEQ        reduce using rule 85 (expr -> expr2 .)
    EQEQ            reduce using rule 85 (expr -> expr2 .)
    EXP             reduce using rule 85 (expr -> expr2 .)
    GE              reduce using rule 85 (expr -> expr2 .)
    GT              reduce using rule 85 (expr -> expr2 .)
    LE              reduce using rule 85 (expr -> expr2 .)
    LT              reduce using rule 85 (expr -> expr2 .)
    MINUS           reduce using rule 85 (expr -> expr2 .)
    MUL             reduce using rule 85 (expr -> expr2 .)
    NE              reduce using rule 85 (expr -> expr2 .)
    OR              reduce using rule 85 (expr -> expr2 .)
    OROR            reduce using rule 85 (expr -> expr2 .)
    PLUS            reduce using rule 85 (expr -> expr2 .)
    EQ              reduce using rule 85 (expr -> expr2 .)
    MULEQ           reduce using rule 85 (expr -> expr2 .)
    DIVEQ           reduce using rule 85 (expr -> expr2 .)
    MINUSEQ         reduce using rule 85 (expr -> expr2 .)
    PLUSEQ          reduce using rule 85 (expr -> expr2 .)
    OREQ            reduce using rule 85 (expr -> expr2 .)
    ANDEQ           reduce using rule 85 (expr -> expr2 .)
    COMMA           reduce using rule 85 (expr -> expr2 .)
    SEMI            reduce using rule 85 (expr -> expr2 .)
    RBRACKET        reduce using rule 85 (expr -> expr2 .)
    RBRACE          reduce using rule 85 (expr -> expr2 .)
    CASE            reduce using rule 85 (expr -> expr2 .)
    OTHERWISE       reduce using rule 85 (expr -> expr2 .)
    END_STMT        reduce using rule 85 (expr -> expr2 .)
    RPAREN          reduce using rule 85 (expr -> expr2 .)
    error           reduce using rule 85 (expr -> expr2 .)


state 4

    (99) expr1 -> PLUS . expr
    (77) expr -> . ident
    (78) expr -> . end
    (79) expr -> . number
    (80) expr -> . string
    (81) expr -> . colon
    (82) expr -> . NEG
    (83) expr -> . matrix
    (84) expr -> . cellarray
    (85) expr -> . expr2
    (86) expr -> . expr1
    (87) expr -> . lambda_expr
    (88) expr -> . ident PLUSPLUS
    (89) expr -> . ident MINUSMINUS
    (111) expr -> . LPAREN expr RPAREN
    (112) expr -> . expr FIELD
    (113) expr -> . expr TRANSPOSE
    (114) expr -> . expr LBRACE expr_list RBRACE
    (115) expr -> . expr LBRACE RBRACE
    (116) expr -> . expr LPAREN expr_list RPAREN
    (117) expr -> . expr LPAREN RPAREN
    (93) ident -> . IDENT
    (95) end -> . END_EXPR
    (94) number -> . NUMBER
    (96) string -> . STRING
    (97) colon -> . COLON
    (106) matrix -> . LBRACKET RBRACKET
    (107) matrix -> . LBRACKET concat_list RBRACKET
    (108) matrix -> . LBRACKET concat_list SEMI RBRACKET
    (109) matrix -> . LBRACKET expr_list RBRACKET
    (110) matrix -> . LBRACKET expr_list SEMI RBRACKET
    (104) cellarray -> . LBRACE RBRACE
    (105) cellarray -> . LBRACE expr_list RBRACE
    (118) expr2 -> . expr AND expr
    (119) expr2 -> . expr ANDAND expr
    (120) expr2 -> . expr BACKSLASH expr
    (121) expr2 -> . expr COLON expr
    (122) expr2 -> . expr DIV expr
    (123) expr2 -> . expr DOT expr
    (124) expr2 -> . expr DOTDIV expr
    (125) expr2 -> . expr DOTEXP expr
    (126) expr2 -> . expr DOTMUL expr
    (127) expr2 -> . expr DOTMULEQ expr
    (128) expr2 -> . expr EQEQ expr
    (129) expr2 -> . expr EXP expr
    (130) expr2 -> . expr GE expr
    (131) expr2 -> . expr GT expr
    (132) expr2 -> . expr LE expr
    (133) expr2 -> . expr LT expr
    (134) expr2 -> . expr MINUS expr
    (135) expr2 -> . expr MUL expr
    (136) expr2 -> . expr NE expr
    (137) expr2 -> . expr OR expr
    (138) expr2 -> . expr OROR expr
    (139) expr2 -> . expr PLUS expr
    (140) expr2 -> . expr EQ expr
    (141) expr2 -> . expr MULEQ expr
    (142) expr2 -> . expr DIVEQ expr
    (143) expr2 -> . expr MINUSEQ expr
    (144) expr2 -> . expr PLUSEQ expr
    (145) expr2 -> . expr OREQ expr
    (146) expr2 -> . expr ANDEQ expr
    (98) expr1 -> . MINUS expr
    (99) expr1 -> . PLUS expr
    (100) expr1 -> . NEG expr
    (101) expr1 -> . HANDLE ident
    (102) expr1 -> . PLUSPLUS ident
    (103) expr1 -> . MINUSMINUS ident
    (92) lambda_expr -> . HANDLE lambda_args expr

    NEG             shift and go to state 24
    LPAREN          shift and go to state 49
    IDENT           shift and go to state 15
    END_EXPR        shift and go to state 23
    NUMBER          shift and go to state 39
    STRING          shift and go to state 48
    COLON           shift and go to state 14
    LBRACKET        shift and go to state 1
    LBRACE          shift and go to state 20
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    HANDLE          shift and go to state 40
    PLUSPLUS        shift and go to state 17
    MINUSMINUS      shift and go to state 50

    lambda_expr                    shift and go to state 30
    ident                          shift and go to state 60
    end                            shift and go to state 43
    string                         shift and go to state 41
    expr                           shift and go to state 63
    number                         shift and go to state 26
    expr2                          shift and go to state 3
    cellarray                      shift and go to state 21
    expr1                          shift and go to state 45
    colon                          shift and go to state 9
    matrix                         shift and go to state 13

state 5

    (12) stmt -> persistent_stmt .
